# XScript-Pretraining

./: .gitignore  CLAUDE.md  NEURON.md  README.md  condensed_claude_chat_for_supervisor.md  pyproject.toml  setup_trainium.sh  thesis-plan.txt
configs/: base_main.yaml  base_pilot.yaml  base_smoke.yaml
results/: models.json
results/alignment/: README.md  align_report.txt  align_v2.txt  ar-fair-15b.md  ar-fair.md  ar-starved-15b.md  en-ar-fair.md  en-ar-starved.json  en-de-starved.json  en-fair-15b.json  en-fair-15b.md  en-fair.json  en-fr-starved.md  en-zh-fair-23b.json  en-zh-fair-23b.md  en-zh-starved-23b.json  en-zh-starved.md  fr-fair-15b.json  fr-fair-15b.md  fr-starved-15b.md  fr-starved.json  lexical_floor.csv  per_layer.csv  summary.csv  zh-fair-12b.json  zh-starved-12b.md
results/alignment_v1_noemb/: ar-fair-15b.json  ar-fair.json  ar-starved-15b.json  ar-starved.json  ar-starved.md  de-fair-15b.json  de-fair-15b.md  de-fair.json  de-fair.md  en-ar-fair.json  en-ar-starved.json  en-ar-starved.md  en-de-fair.json  en-de-fair.md  en-de-starved.json  en-de-starved.md  en-fair-15b.json  en-fair.json  en-fair.md  en-fr-fair.json  en-fr-fair.md  en-starved.md  (+19 more)
scripts/: _scan_shards.py  _verify_shards.py  extra_langs_pool.py  gpu_pilot.py  pool_status.py  smoke.py  tok_compare.py  train_status.py  wandb_resync.py
slurm/: 00_pull_container.sh  01_setup_venv.sh  02_setup_runtime.sbatch  10_prep_data.sh  11_tok_train.sbatch  20_pack.sbatch  30_train.sbatch  40_eval.sbatch  41_bench.sbatch  99_hold.sbatch  env.sh  recover_live_30b.sh  submit_30b.sh  submit_matrix.sh
(+294 files in other folders)
